data/derived/sp14/progs/unify/prog4504.ml.out
Characters 82-83:
  | []  -> [], snd a
                   ^
Error: This expression has type 'a list
       but an expression was expected of type 'b * 'c
